--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "dotenv": "^16.4.7",
     "drizzle-kit": "^0.30.5",
     "drizzle-orm": "^0.40.0",
+    "elevenlabs": "^1.54.0",
     "jose": "^6.0.8",
     "lucide-react": "^0.479.0",
     "next": "15.2.2-canary.3",
