--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@types/react": "19.0.10",
     "@types/react-dom": "19.0.4",
     "autoprefixer": "^10.4.20",
+    "axios": "^1.8.4",
     "bcryptjs": "^3.0.2",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
@@ -41,6 +42,7 @@
     "react-dom": "19.0.0",
     "server-only": "^0.0.1",
     "stripe": "^17.7.0",
+    "swr": "^2.3.3",
     "tailwind-merge": "^3.0.2",
     "tailwindcss": "4.0.12",
     "tailwindcss-animate": "^1.0.7",
