--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "tailwindcss": "4.0.12",
     "tailwindcss-animate": "^1.0.7",
     "tailwindcss-react-aria-components": "2.0.0",
+    "twilio": "^5.5.1",
     "typescript": "^5.8.2",
     "zod": "^3.24.2"
   },
