--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@types/node": "^22.13.9",
     "@types/react": "19.0.10",
     "@types/react-dom": "19.0.4",
+    "@vercel/analytics": "^1.5.0",
     "autoprefixer": "^10.4.20",
     "axios": "^1.8.4",
     "bcryptjs": "^3.0.2",
