--- a/package.json
+++ b/package.json
@@ -38,11 +38,13 @@
     "jose": "^6.0.8",
     "lucide-react": "^0.479.0",
     "next": "15.2.2-canary.3",
+    "next-themes": "^0.4.6",
     "postcss": "^8.5.3",
     "postgres": "^3.4.5",
     "react": "19.0.0",
     "react-dom": "19.0.0",
     "server-only": "^0.0.1",
+    "sonner": "^2.0.1",
     "stripe": "^17.7.0",
     "swr": "^2.3.3",
     "tailwind-merge": "^3.0.2",
