--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "lucide-react": "^0.479.0",
     "next": "15.2.2-canary.3",
     "next-themes": "^0.4.6",
+    "openai": "^4.90.0",
     "postcss": "^8.5.3",
     "postgres": "^3.4.5",
     "react": "19.0.0",
